# my-gpt

./: Cargo.toml  README.md
python/: bigram.py
src/: encoder.rs  main.rs
