[package]
name = "my-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
# candle-core = { version = "0.4.0", features = ["cuda"] }
# candle-nn = { version = "0.4.0", features = ["cuda"] }
candle-core = { version = "0.4.0", features = [] }
candle-nn = { version = "0.4.0", features = [] }
itertools = "0.12.1"
